mipソルバーのアウトプット形式変更

--- a/setpartitioning/SolveSPPonGurobi.ipynb
+++ b/setpartitioning/SolveSPPonGurobi.ipynb
@@ -167,13 +167,14 @@
    ],
    "source": [
     "# ソルバー\n",
-    "n=40\n",
+    "n=10\n",
     "m_list=[i for i in range(int(n/10), n, int(n/10))]\n",
     "l_list=10\n",
     "# A_size = 3\n",
     "\n",
+    "output = []\n",
     "try:\n",
-    "    f = open(f'./output/setpartitioning_mip_n={n}_out.csv', 'w')\n",
+    "    f = open(f'./output/setpartitioning_mip_n={n}1_out.csv', 'w')\n",
     "    writer = csv.writer(f)\n",
     "    for m in m_list:\n",
     "        A_size = int(sqrt(m))\n",
@@ -193,9 +194,9 @@
     "                # print(A[65][1])\n",
     "                \n",
     "            U_bilp, L_bilp ,t , flag= seeksetpart(n+1,m,A,c, A_item)\n",
-    "            output=[int(U_bilp)]\n",
+    "            output.append(int(U_bilp))\n",
     "            # print(output)\n",
-    "            writer.writerow(output)\n",
+    "    writer.writerow(output)\n",
     "\n",
     "finally:\n",
     "    f.close()"
