--- a/setpartitioning/SolveSPPonGurobi.ipynb
+++ b/setpartitioning/SolveSPPonGurobi.ipynb
@@ -65,116 +65,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{9, 4, 6, 33}\n",
-      "{0, 4, 36}\n",
-      "{2, 20, 34, 36}\n",
-      "{33, 22}\n",
-      "{16, 1, 13, 31}\n",
-      "{16, 21, 19, 13}\n",
-      "{18, 3, 12}\n",
-      "{32, 35, 15}\n",
-      "{24, 25, 6, 7}\n",
-      "{26, 20}\n",
-      "{38, 39, 8, 16, 28, 29, 30}\n",
-      "{1, 19, 13, 35}\n",
-      "{3, 13, 16, 20, 23, 24}\n",
-      "{19, 20, 13, 14}\n",
-      "{3, 4, 5, 7, 39, 9, 13}\n",
-      "{30, 39, 22, 15}\n",
-      "{3, 36, 7, 15, 23, 30}\n",
-      "{2, 34, 36, 37, 13, 18, 26}\n",
-      "{32, 36, 37, 13, 19, 21, 23}\n",
-      "{0, 34, 12, 13, 28}\n",
-      "{32, 33, 2, 34, 12, 28}\n",
-      "{3, 6, 7, 39, 15, 19, 24}\n",
-      "{1, 38, 13, 24, 31}\n",
-      "{25, 37, 21, 6}\n",
-      "{23, 20, 21, 15}\n",
-      "{32, 1, 9, 11, 16, 20}\n",
-      "{32, 1, 33, 37, 29, 31}\n",
-      "{1, 39, 10, 23, 25}\n",
-      "{38, 39, 20, 22, 31}\n",
-      "{36, 5, 39, 13, 21, 23, 28}\n",
-      "{40}\n",
-      "{40}\n",
-      "{34, 12, 23, 15}\n",
-      "{3, 6, 39, 13, 23, 27}\n",
-      "{40}\n",
-      "{40}\n",
-      "{33, 2, 37, 5, 39, 23}\n",
-      "{32, 35, 10, 17, 22, 29}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{33, 35, 36, 5, 37, 9, 16, 25, 30}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{6, 39, 9, 12, 17, 24, 30}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n",
-      "{40}\n"
+      "{27, 13, 15}\n",
+      "{26, 20, 28}\n",
+      "{0, 22, 31}\n",
+      "{2, 18, 31}\n",
+      "{33, 11, 5}\n",
+      "{32, 11, 12}\n",
+      "{32, 9, 20}\n",
+      "{20, 21, 14}\n",
+      "{18, 21, 14}\n",
+      "{16, 32, 23}\n",
+      "{32, 29, 5}\n",
+      "{0, 33, 6, 16, 21}\n",
+      "{9, 31, 23}\n",
+      "{16, 32, 19, 15}\n",
+      "{0, 27, 12, 14}\n",
+      "{33, 10, 23, 29, 31}\n",
+      "{7, 12, 15, 17, 25}\n",
+      "{32, 34, 10, 18, 22, 25}\n",
+      "{0, 34, 11, 12, 20}\n",
+      "{8, 14, 15, 23, 27}\n",
+      "{34, 6, 19, 20, 26, 29}\n",
+      "{16, 33, 21, 23}\n",
+      "{16, 24, 32, 22}\n",
+      "{24, 29, 3, 5}\n",
+      "{1, 18, 28, 30}\n",
+      "{34, 4, 5, 25, 26, 28}\n",
+      "{2, 34, 8, 26, 27, 30}\n",
+      "{24, 27, 14, 22}\n",
+      "{9, 29, 6, 15}\n",
+      "{0, 17, 12, 21}\n",
+      "{33, 2, 9, 11, 22, 31}\n",
+      "{4, 7, 24, 25, 27}\n",
+      "{4, 5, 24, 27, 30}\n",
+      "{33, 18, 22, 27, 31}\n",
+      "{6, 9, 17, 21, 24, 28}\n",
+      "{34, 9, 13, 15, 24}\n",
+      "{1, 4, 16, 18, 23, 28}\n",
+      "{34, 3, 4, 10, 25}\n",
+      "{1, 33, 34, 12, 23, 28}\n",
+      "{0, 18, 19, 21, 23}\n",
+      "{35}\n",
+      "{35}\n",
+      "{3, 14, 20, 25, 29}\n",
+      "{33, 34, 3, 4, 15, 20, 24}\n",
+      "{3, 21, 24, 25, 30, 31}\n",
+      "{32, 33, 34, 4, 10, 13, 22, 26}\n",
+      "{32, 1, 5, 6, 14, 23, 27}\n",
+      "{4, 5, 14, 19, 20, 29, 31}\n",
+      "{32, 1, 4, 9, 14, 22, 24}\n",
+      "{6, 9, 10, 12, 25, 26, 27}\n",
+      "{35}\n",
+      "{0, 3, 7, 15, 18}\n",
+      "{3, 7, 11, 22, 31}\n",
+      "{35}\n",
+      "{35}\n",
+      "{33, 4, 6, 13, 30, 31}\n",
+      "{35}\n",
+      "{35}\n",
+      "{5, 7, 9, 23, 26, 30}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n",
+      "{35}\n"
      ]
     }
    ],
    "source": [
     "# ソルバー\n",
-    "n=10\n",
+    "n=35\n",
     "m_list=[i for i in range(int(n/10), n, int(n/10))]\n",
     "l_list=10\n",
     "# A_size = 3\n",
     "\n",
     "output = []\n",
     "try:\n",
-    "    f = open(f'./output/setpartitioning_mip_n={n}1_out.csv', 'w')\n",
+    "    f = open(f'./output/setpartitioning_mip_n={n}_out.csv', 'w')\n",
     "    writer = csv.writer(f)\n",
     "    for m in m_list:\n",
     "        A_size = int(sqrt(m))\n",
